--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">= 18"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
@@ -14,6 +17,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install",
     "start": "node index"
   },
   "author": "Evgeniy Petrov",
